--- a/src/templates_s3/templator_s3.org
+++ b/src/templates_s3/templator_s3.org
@@ -42,7 +42,6 @@
   #+end_src
 
   #+begin_src c :tangle prefix_s3.h :noweb yes
-<<header>>
 #ifndef TREXIO_S3_H
 #define TREXIO_S3_H
 
@@ -59,7 +58,7 @@
 #include <unistd.h>
 #include <sys/stat.h>
 #include <stdbool.h>
-//#include <trexio_s3.h>
+#include <trexio_text.h>
   #+end_src
 
   #+begin_src c :tangle prefix_s3.c :noweb yes
